@@ -1,3 +1,5 @@
+* Rename coda_informations to coda_information
+
 Version 5.0.0 - 2018-10-01
 * Bug fixes (see mercurial logs for details)
 * Remove support for Python 2.7
